apps/base/transmission/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: transmission
  labels:
    pod-security.kubernetes.io/enforce: "privileged"
