apps/base/transmission/deployment.yaml
# yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.14.0/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: transmission
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: transmission
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: linuxserver-common
            optional: false
        - configMapRef:
            name: transmission-config
            optional: false
        image: ghcr.io/linuxserver/transmission:4.0.6
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 1
          tcpSocket:
            port: 9091
          timeoutSeconds: 2
        name: transmission
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 2
          tcpSocket:
            port: 9091
          timeoutSeconds: 2
        resources:
          limits:
            cpu: 500m
            memory: 2000Mi
        volumeMounts:
        - mountPath: /media/Transmission
          name: media
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: media
        nfs:
          path: /media/Transmission
          server: 192.168.1.188
