apps/base/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: transmission
spec:
  selector:
    app:  transmission
  ports:
  - port: 9091
    name: http
    protocol: TCP
    targetPort: 9091
  sessionAffinity: None
  type: ClusterIP
