apps/base/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
spec:
  defaultBackend:
    service:
      name: transmission
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - transmission
